# nepali_embedding

./: .gitattributes  .gitignore  AUTHORS.md  MANIFEST.in  README.md  config.py  downloader.py  requirements.txt  setup.cfg  setup.py
baky2vec/: d2v.model  train_bakya2vec.py
bakya2vec/: bakya2vec_inference.py  nepali_data_preprocessor.py  train_bakya2vec.py  try_doc2vec_english.py
nepBERT/: embedding.py  embedding_generator.py
nepali_embedding/: __init__.py  config.py  downloader.py  index.xml
nepali_embedding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nepali_embedding/bakya2vec/: train_doc2vec_model.py
nepali_embedding/nepBERT/: __init__.py  embedding_generator.py
nepali_embedding/sabda2vec/: README.md  inference.py
nepali_embedding/sabda2vec/training/: nepali_tokenizer.py  test_nepali_nlp.py  train_sabda2vec.py
nepali_embedding_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sabda2vec/: __init__.py  inference.py  spell_checker.py
sabda2vec/models/: .gitattributes  sabda_to_vec_model  sabda_to_vec_model_md  sabda_to_vec_model_md.trainables.syn1neg.npy  sabda_to_vec_model_md.wv.vectors.npy
sabda2vec/training/: train_sabda2vec.py
