[metadata]
name = nepali_embedding
version = 0.1
# author = 
# author_email = 
# description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pudasainishushant/nepali_embedding
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True